oxiplate-derive/tests/broken/extends/multiple-parents.stderr
error: Multiple parent blocks present in block
 --> tests/broken/extends/multiple-parents.rs:6:35
  |
6 | {% block content %}{% parent %}{% parent %}
  |                                   ^^^^^^
